added calc page

--- a/Uppgift1.2/Layout/NavMenu.razor
+++ b/Uppgift1.2/Layout/NavMenu.razor
@@ -8,13 +8,13 @@
             </NavLink>
         </li>
         <li>
-            <NavLink class="nav-link" href="razor">
-                Razor
+            <NavLink class="nav-link" href="converting">
+                Converting
             </NavLink>
         </li>
         <li>
-            <NavLink class="nav-link" href="about">
-                About
+            <NavLink class="nav-link" href="JSON">
+                JSON
             </NavLink>
         </li>
     </ul>
