--- a/Uppgift1.2/Pages/JSON.razor
+++ b/Uppgift1.2/Pages/JSON.razor
@@ -1,6 +1,6 @@
-﻿@page "/about"
+﻿@page "/JSON"
 
-<PageTitle>About Me</PageTitle>
+<PageTitle>JSON</PageTitle>
 <section class="container">
 	<div class="is-flex-desktop gap-5">
 		<div class="mb-4">
