--- a/Uppgift1.2/Pages/JSON.razor
+++ b/Uppgift1.2/Pages/JSON.razor
@@ -5,48 +5,38 @@
 
 <PageTitle>JSON</PageTitle>
 <section class="container">
-    <h1 class="title">Weather Forecast</h1>
-    <!--Untill data is loaded-->
-    @if (forecasts == null)
+    <h1 class="title">Random Dog Image</h1>
+    @if (dogImage == null)
     {
-        <p><em>Loading...</em></p> 
+        <p><em>Loading...</em></p>
     }
-    else if (forecasts.Count == 0)  
+    else if (dogImage.Status != "success")
     {
-        <p><em>No data available.</em></p>    <!--If no data-->
+        <p><em>Could not fetch dog image.</em></p>
     }
     else
     {
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Temperature (C)</th>
-                    <th>Summary</th>
-                </tr>
-            </thead>
-            <tbody>
-            <!--[] in case of null, cant really happen due to earlier checks but IDE complained-->
-                @foreach (var forecast in forecasts ?? [] )
-                {
-                    <tr>
-                        <td>@forecast.Date.ToShortDateString()</td>
-                        <td>@forecast.TemperatureC</td>
-                        <td>@forecast.Summary</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <img src="@dogImage.Message" alt="Random Dog Image" class="img-fluid" />
     }
 </section>
+
 <Uppgift1._2.Components.TestComponent Name="Testing.." />
 
 @code {
-    private List<WeatherForecast> forecasts = [];
+    private DogImage dogImage = new DogImage { };
 
-	//Async run to fetch json, if null set to empty list
+    //Async run to fetch json, if null set to empty object
     protected override async Task OnInitializedAsync()
     {
-       forecasts = await Http.GetFromJsonAsync<List<WeatherForecast>>("sample-data/weather.json") ?? [];
+        try
+        {
+            string apiUrl = "https://dog.ceo/api/breeds/image/random";
+            dogImage = await Http.GetFromJsonAsync<DogImage>(apiUrl) ?? new DogImage {};
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Could not fetch dog image: {ex.Message}");
+            dogImage = new DogImage { Status = "error" };
+        }
     }
 }
